Refactor ConcurrentMapSample